# zuban-test

consumer/: pyproject.toml
consumer/src/consumer/: main.py
http-client/: README.md  pyproject.toml
mypy-tests/: implicit_unions.py  protocol_narrowing.py  stubgen_attr_test.py  type_is_vs_guard.py
zuban-test/: pyproject.toml
zuban-test/http-client/src/http_client/: __init__.py  client.py
