[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "http-client"
version = "0.1.0"
description = "A simple HTTP client using httpx"
requires-python = ">=3.8"
dependencies = [
    "httpx",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "zuban",
]

[tool.hatch.build.targets.wheel]
packages = ["src/http_client"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src"]
